[project]
name = "i_log2.py.adligo.org"
version = "0.0.1"
authors = [
    { name = "Scott Morgan", email = "scott@adligo.com" },
]
description = "A set of interfaces for logging"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["utility", "cli", "logging"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache :: 2",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/adligo/i_log2.py.adligo.org"
"Bug Tracker" = "https://github.com/adligo/i_log2.py.adligo.org"